Dynamic Home Page
The home page is now dynamic and the applications on it appear descendingly by the number of app users. They consists maximum of four rows and many can be added later.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Playground.php
 DBProject/IMAGES/fwrjkf.png
 DBProject/IMAGES/Categories Working.jpg
+DBProject/IMAGES/BNHA Fantasy AU From Chapter_120.png
