Fixed post image error + Added that special charcters can be written in either a post or a review
Just as in the title

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ Playground.php
 DBProject/IMAGES/fwrjkf.png
 DBProject/IMAGES/Categories Working.jpg
 DBProject/IMAGES/BNHA Fantasy AU From Chapter_120.png
+DBProject/IMAGES/1_484_1.jpg
+DBProject/IMAGES/1_484_2.jpg
+DBProject/IMAGES/1_484_3.png
+DBProject/IMAGES/1_484_4.jpg
+DBProject/IMAGES/1_484_5.jpg
