Editing and Deleting Posts Implemeneted
Also, added some checks for the review. Redirected all posts to the group page after modification. Same thing with the reviews but to the app page instead. Modifying a post can be changing the test and/or picture. The picture can also be removed instead of just changing it.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ DBProject/IMAGES/1_484_2.jpg
 DBProject/IMAGES/1_484_3.png
 DBProject/IMAGES/1_484_4.jpg
 DBProject/IMAGES/1_484_5.jpg
+DBProject/IMAGES/Miraculous Love Square.jpg
+DBProject/IMAGES/1_484_7.jpg
