--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ DBProject/IMAGES/1_484_4.jpg
 DBProject/IMAGES/1_484_5.jpg
 DBProject/IMAGES/Miraculous Love Square.jpg
 DBProject/IMAGES/1_484_7.jpg
+DBProject/SupportTicketFiles/ 484_2021-01-08.jpg
